# ssri-udt

./: Cargo.toml  Makefile  README.md
contracts/ssri-udt/: Cargo.toml  extra.mol
contracts/ssri-udt/src/: config.rs  error.rs  fallback.rs  main.rs  modules.rs  molecule.rs  utils.rs
tests/: Cargo.toml
tests/src/: lib.rs  ssri.rs  tests.rs  tool.rs  utils.rs
