[package]
name = "ssri-udt"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-std = { version = "0.16.4", features = ["allocator", "ckb-types", "dummy-atomic"] }
ckb-ssri-std = { version = "0.0.1" }
ckb-ssri-std-proc-macro = { version = "0.0.1" }
serde_molecule = { version = "1.1.2", default-features = false, features = ["alloc"] }
serde = { version = "1.0.210", default-features = false, features = ["derive"] }
ckb-hash = { version = "0.120.0", default-features = false, features = ["ckb-contract"] }

[profile.release]
overflow-checks = true
opt-level = 3
panic = 'abort'
strip = true
lto = true
